--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ pydub==0.23.0
 requests==2.14.2
 SoundFile==0.10.2
 urllib3==1.25.7
-pytube==9.3.5
 boto3==1.9.71
 APScheduler==3.0.4
 awscli==1.9.11
 SQLAlchemy==1.0.4
 Flask-SQLAlchemy==2.3.2
+git+https://github.com/giacaglia/pytube.git
